Implement card builder component with draggable functionality and customizable properties

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,1 @@
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<div class="row">
-  <div class="col-md-3">
-    <app-selectc [items]="cities" [(selectedValue)]="selectedCityId" [pagination]="true" #citiesSelector ></app-selectc>
-
-  </div>
-  <div class="col-md-3">
-    <app-selectc [items]="cities" [(selectedValue)]="selectedCityId" [pagination]="true"></app-selectc>
-
-  </div>
-
-  <div class="col-md-3">
-    <app-selectc [items]="cities" [(selectedValue)]="selectedCityId" [pagination]="true"></app-selectc>
-
-  </div>
-</div>
-
-<button (click)="openSelect()">asd</button>
-<!-- <div *ngFor="let city of cities;">
-  <button (click)="selectedCityId=city.id">{{city.text}}</button>
-</div> -->
+<app-card-builder></app-card-builder>
