Add getText method to CardElement for dynamic text retrieval based on data type

--- a/src/app/components/card-builder/card-builder.component.html
+++ b/src/app/components/card-builder/card-builder.component.html
@@ -32,7 +32,7 @@
     <div id="canvas" [style]="card.toCss()">
       <div appDraggable *ngFor="let element of card.elements" [style]="element.toCss()" (click)="selectElement(element)"
         class="card-element" [ngClass]="{ 'selected': cardElement === element }" (dragEnd)="onDragEnd($event, element)">
-        <div *ngIf="element.type === 'text'">{{ element.text }}</div>
+        <div *ngIf="element.type === 'text'">{{ element.getText()}}</div>
         <img *ngIf="element.type === 'image'" [src]="element.getImageUrl()" [alt]="element.getImageUrl()" />
       </div>
     </div>
